--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .wrapper{
-    height: 300vh;
+    height: 210vh;
 }
 svg{
     position: fixed;
@@ -15,5 +15,7 @@ svg{
 path{
     fill: rgb(255, 255, 255);
     transition: fill 1s ease;
-
+}
+#fotki{
+    margin: auto;
 }
